--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-`# Code for "Cooling Oceans Did Trigger Ordovician Biodiversification" (Ontiveros et al., in revision)
+# Code for "Cooling Oceans Did Trigger Ordovician Biodiversification" (Ontiveros et al., in revision)
 
-`##Requirements
+## Requirements
 
 The code needs at least MATLAB 2020 a. to be active. The Mapping Toolbox is needed to produce the maps. 
 
